--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -3700,6 +3700,7 @@ CPU	cpu
 彼此	bkcy
 报导	bkdb
 彼得堡	bkdb
+摆渡车	bkdc
 摆渡	bkdd
 不可多得	bkdd
 摆荡	bkde
@@ -3707,8 +3708,8 @@ CPU	cpu
 拨动	bkdg
 报端	bkdh
 拜倒	bkdj
-拔掉	bkdk
 拨打	bkdk
+拔掉	bkdk
 拜读	bkdl
 报道	bkdm
 搏斗	bkdn
@@ -10106,7 +10107,6 @@ bilibili	blbl
 操作	ckij
 搓澡巾	ckij
 挫折	ckik
-参考资料	ckil
 持证	ckil
 揣着	ckim
 拆字	ckin
@@ -10337,7 +10337,6 @@ bilibili	blbl
 操作	ckzj
 搓澡巾	ckzj
 挫折	ckzk
-参考资料	ckzl
 持证	ckzl
 揣着	ckzm
 操着	ckzm
@@ -19439,6 +19438,7 @@ bilibili	blbl
 蛋制品	dvip
 队长	dvit
 陡增	dviu
+胆子	dviv
 肚子	dviv
 胆战	dviy
 队	dvj
@@ -19449,7 +19449,6 @@ bilibili	blbl
 陡峻	dvjo
 胆结石	dvjs
 陡急	dvjw
-胆经	dvjx
 蛋壳	dvku
 陡坎	dvku
 队列	dvla
@@ -19530,6 +19529,7 @@ bilibili	blbl
 蛋制品	dvzp
 队长	dvzt
 陡增	dvzu
+胆子	dvzv
 肚子	dvzv
 胆战	dvzy
 多	dw
@@ -25191,8 +25191,6 @@ bilibili	blbl
 纺织机	fxij
 缚住	fxij
 缝扎	fxik
-复习资料	fxil
-复习指南	fxin
 纺织品	fxip
 缝制	fxit
 纷争	fxiw
@@ -25255,8 +25253,6 @@ bilibili	blbl
 纺织机	fxzj
 缚住	fxzj
 缝扎	fxzk
-复习资料	fxzl
-复习指南	fxzn
 纺织品	fxzp
 缝制	fxzt
 纷争	fxzw
@@ -28879,6 +28875,7 @@ bilibili	blbl
 公信度	gmxd
 关系	gmxe
 关西	gmxf
+关系户	gmxh
 公休	gmxj
 刮目相看	gmxk
 关心	gmxl
@@ -29737,7 +29734,6 @@ GPRS	gprs
 过人之处	gric
 港人治港	grig
 个人账户	grih
-个人资料	gril
 骨肉至亲	griq
 感人至深	gris
 骨肉至亲	griu
@@ -29810,7 +29806,6 @@ GPRS	gprs
 过人之处	grzc
 港人治港	grzg
 个人账户	grzh
-个人资料	grzl
 骨肉至亲	grzq
 感人至深	grzs
 骨肉至亲	grzu
@@ -39318,7 +39313,6 @@ GPRS	gprs
 这里	ihlo
 照葫芦画瓢	ihlp
 资料片	ihlp
-忠厚老实	ihls
 资料室	ihls
 站了	ihlv
 主链	ihly
@@ -40881,7 +40875,6 @@ GPRS	gprs
 之城	ilcu
 诛除	ilcv
 之处	ilcw
-资料查询	ilcx
 之大	ilda
 之大成	ildc
 之都	ildf
@@ -44871,10 +44864,8 @@ GPRS	gprs
 终结	ixjx
 忠孝节义	ixjy
 织锦	ixjy
-在线客服	ixkf
 绽开	ixkg
 争先恐后	ixkh
-资讯科技	ixkj
 缀	ixl
 纵列	ixla
 终老	ixlf
@@ -48629,8 +48620,8 @@ GPRS	gprs
 借款人	jjkr
 健康人	jjkr
 仅靠	jjkt
-借壳	jjku
 借款	jjku
+借壳	jjku
 岌岌可危	jjkw
 健康险	jjkx
 久经考验	jjky
@@ -48834,8 +48825,8 @@ GPRS	gprs
 见机行事	jjxs
 俊秀	jjxt
 侥幸	jjxu
-仅限	jjxv
 间隙	jjxv
+仅限	jjxv
 假象	jjxw
 假惺惺	jjxx
 仅限于	jjxy
@@ -48844,14 +48835,14 @@ GPRS	gprs
 焦油	jjyd
 假药	jjye
 介于	jjyg
-今夜	jjyh
 介意	jjyh
 佳音	jjyh
+今夜	jjyh
 倦意	jjyh
 借喻	jjyi
 借阅	jjyj
-隽永	jjyl
 偈语	jjyl
+隽永	jjyl
 佳肴	jjym
 仅由	jjyo
 戒急用忍	jjyr
@@ -48918,11 +48909,10 @@ GPRS	gprs
 接班	jkbg
 街霸	jkbh
 捃	jkbi
-据报载	jkbi
 搅拌机	jkbj
 搅拌	jkbk
-拘捕	jkbk
 捷报	jkbk
+拘捕	jkbk
 抉	jkbk
 挤扁	jkbl
 挤爆	jkbm
@@ -49019,6 +49009,7 @@ GPRS	gprs
 接站	jkih
 撅嘴	jkii
 接住	jkij
+揪住	jkij
 艰苦卓绝	jkij
 抉择	jkik
 接招	jkik
@@ -49446,10 +49437,10 @@ GPRS	gprs
 肩胛骨	jljg
 鸡叫	jlji
 讲价	jljj
-讲讲	jljl
 谨记	jljl
-颈静脉	jljm
+讲讲	jljl
 鸡精	jljm
+颈静脉	jljm
 讲究	jljn
 鸡架	jljn
 军界	jljo
@@ -49895,8 +49886,8 @@ GPRS	gprs
 爝	jmmb
 精密度	jmmd
 卷门	jmmj
-粳米	jmmm
 精美	jmmm
+粳米	jmmm
 精密	jmmn
 爝	jmmo
 精明	jmmr
@@ -50031,8 +50022,8 @@ GPRS	gprs
 精细	jmxx
 兼有	jmya
 卷烟厂	jmyc
-焗油	jmyd
 精油	jmyd
+焗油	jmyd
 精液	jmyd
 精英	jmye
 兼营	jmye
@@ -50202,7 +50193,7 @@ GPRS	gprs
 家长会	jnih
 加	jnii
 家长制	jnii
-家住	jnij
+架住	jnij
 惊蛰	jnik
 举证	jnil
 加州	jnim
@@ -50476,7 +50467,7 @@ GPRS	gprs
 家族	jnzh
 家长会	jnzh
 加足	jnzi
-家住	jnzj
+架住	jnzj
 惊蛰	jnzk
 举证	jnzl
 加州	jnzm
@@ -50565,7 +50556,6 @@ GPRS	gprs
 甲胄	joio
 见证人	joir
 睫状体	joit
-见智	joit
 见长	joit
 甲子	joiv
 罥	joiv
@@ -50701,7 +50691,6 @@ GPRS	gprs
 甲胄	jozo
 见证人	jozr
 睫状体	jozt
-见智	jozt
 见长	jozt
 甲子	jozv
 甲状腺	jozx
@@ -51242,6 +51231,7 @@ GPRS	gprs
 奸贼	jsio
 较早	jsir
 巨制	jsit
+较重	jsit
 皆知	jsit
 轿子	jsiv
 娇纵	jsix
@@ -51280,9 +51270,9 @@ GPRS	gprs
 巨款	jsku
 巨龙	jsla
 辑录	jslb
+巨浪	jsld
 姣丽	jsld
 娟丽	jsld
-巨浪	jsld
 聚少离多	jsld
 巨鹿	jslh
 聚散离合	jslh
@@ -51310,7 +51300,6 @@ GPRS	gprs
 嫁	jsn
 嫁	jsna
 奸佞	jsnj
-皆能	jsnl
 较难	jsnl
 娇嫩	jsns
 妓女	jsns
@@ -51493,8 +51482,8 @@ GPRS	gprs
 奸贼	jszo
 较早	jszr
 巨制	jszt
-皆知	jszt
 较重	jszt
+皆知	jszt
 轿子	jszv
 娇纵	jszx
 经世致用	jszy
@@ -51580,8 +51569,8 @@ GPRS	gprs
 矫治	jtid
 简直	jtif
 矫正	jtif
-简章	jtih
 简装	jtih
+简章	jtih
 筥	jtii
 积攒	jtik
 矫诏	jtil
@@ -51613,7 +51602,6 @@ GPRS	gprs
 脚踏两只船	jtlc
 脚踏两条船	jtlc
 焦头烂额	jtle
-积劳	jtle
 简论	jtll
 简炼	jtlm
 进退两难	jtln
@@ -51621,8 +51609,8 @@ GPRS	gprs
 简略	jtlo
 简陋	jtlv
 稽留	jtlw
-筋络	jtlx
 简练	jtlx
+筋络	jtlx
 九天揽月	jtly
 积虑	jtly
 集体利益	jtly
@@ -51715,11 +51703,10 @@ GPRS	gprs
 积蓄	jtxe
 矫形	jtxg
 积雪	jtxh
-季羡林	jtxl
-积习	jtxl
 简写	jtxl
+积习	jtxl
 简讯	jtxl
-简谐	jtxl
+季羡林	jtxl
 就汤下面	jtxm
 积血	jtxr
 街头巷尾	jtxw
@@ -51800,19 +51787,16 @@ GPRS	gprs
 劫财	juco
 监测器	jucq
 吉川	jucr
-均称	juct
 坚称	juct
 监察厅	juct
 监测器	jucu
-均采用	jucy
-监察员	jucy
 监察院	jucy
+监察员	jucy
 监测站	jucz
 劫夺	juda
 吉大	juda
 鉴定费	judf
 击其惰归	judg
-均等化	judh
 鉴定会	judh
 劫道	judm
 坚定	judn
@@ -51880,16 +51864,15 @@ GPRS	gprs
 坚贞	juiy
 均居	jujb
 监禁	jujc
+坚决	jujh
 嘉奖	jujh
 嘉靖	jujh
-坚决	jujh
 紧接着	juji
 均价	jujj
 紧接	jujk
-几起几落	jujl
 监军	jujl
+几起几落	jujl
 境界	jujo
-均较	jujs
 驾轻就熟	jujs
 紧紧	juju
 紧急	jujw
@@ -51923,7 +51906,6 @@ GPRS	gprs
 嘉年华	junh
 嘉	juni
 劫难	junl
-均能	junl
 劫	junn
 劼	junn
 境内	juno
@@ -52130,21 +52112,21 @@ GPRS	gprs
 胶	jvhk
 脚话	jvhl
 降火	jvhm
-肌注	jvid
 脚注	jvid
+肌注	jvid
 降职	jvif
 脚趾	jvii
 脚掌	jvij
 脚趾甲	jvij
 祭祖	jvil
-祭灶	jvim
-胶州	jvim
 胶着	jvim
+胶州	jvim
+祭灶	jvim
 胶质	jviq
 降至	jvis
 脚趾头	jvit
-胶子	jviv
 降脂	jviv
+胶子	jviv
 胶纸	jvix
 阶	jvj
 祭酒	jvjd
@@ -52211,8 +52193,8 @@ GPRS	gprs
 祭司	jvsb
 胶水	jvsd
 降水	jvsd
-降世	jvsf
 降速	jvsf
+降世	jvsf
 脚伤	jvsj
 脚手架	jvsj
 祭扫	jvsk
@@ -52227,8 +52209,8 @@ GPRS	gprs
 肌痛	jvth
 脚踏	jvti
 脚踢	jvti
-肌体	jvtj
 胶体	jvtj
+肌体	jvtj
 祭台	jvtl
 降糖	jvtm
 降头术	jvts
@@ -52254,8 +52236,8 @@ GPRS	gprs
 胶丸	jvww
 卺	jvx
 降薪	jvxe
-脚癣	jvxh
 降序	jvxh
+脚癣	jvxh
 降雪	jvxh
 脚心	jvxl
 亟须	jvxq
@@ -52301,8 +52283,8 @@ GPRS	gprs
 九百	jwba
 角标	jwbc
 鱾	jwbc
-九百	jwbd
 几百	jwbd
+九百	jwbd
 几本	jwbf
 几百个	jwbg
 狡辩	jwbh
@@ -52380,11 +52362,9 @@ GPRS	gprs
 馑	jwf
 极为方便	jwfb
 解放初	jwfc
-句法	jwfd
 解法	jwfd
+句法	jwfd
 解乏	jwfe
-较为丰富	jwff
-极为反感	jwfg
 解放	jwfh
 解放后	jwfh
 几分钟	jwfi
@@ -52436,9 +52416,9 @@ GPRS	gprs
 猄	jwhp
 鲸	jwhp
 鲚	jwhr
+解惑	jwhs
 九华山	jwhs
 系好	jwhs
-解惑	jwhs
 急坏	jwhu
 狡猾	jwhw
 獍	jwhw
@@ -52475,9 +52455,9 @@ GPRS	gprs
 急转	jwis
 几种	jwit
 急走	jwiu
+饺子	jwiv
 句子	jwiv
 狷	jwiv
-饺子	jwiv
 几周	jwiw
 急转弯	jwiw
 急骤	jwix
@@ -52486,8 +52466,8 @@ GPRS	gprs
 急召	jwiz
 甲午战争	jwiz
 见微知著	jwiz
-久居	jwjb
 急剧	jwjb
+久居	jwjb
 急救车	jwjc
 解禁	jwjc
 解酒	jwjd
@@ -52637,8 +52617,8 @@ GPRS	gprs
 急售	jwsj
 纪委书记	jwsj
 祭扫	jwsk
-祭祀	jwsl
 解说	jwsl
+祭祀	jwsl
 解释	jwsm
 急刹	jwsm
 尽我所能	jwsn
@@ -52662,9 +52642,9 @@ GPRS	gprs
 节外生枝	jwsz
 解套	jwta
 救亡图存	jwtc
-几天	jwtg
 祭天	jwtg
 鲸吞	jwtg
+几天	jwtg
 精卫填海	jwth
 解体	jwtj
 极为痛苦	jwtk
@@ -52695,8 +52675,8 @@ GPRS	gprs
 几圈	jwuo
 九泉	jwur
 急切	jwus
-几千	jwut
 解气	jwut
+几千	jwut
 几起	jwuu
 鲣	jwuu
 几千万	jwuw
@@ -52851,8 +52831,8 @@ GPRS	gprs
 继承人	jxcr
 绞车	jxcs
 继承权	jxcu
-结肠	jxcv
 继承	jxcv
+结肠	jxcv
 绝处	jxcw
 纠缠	jxcx
 经常性	jxcx
@@ -52866,9 +52846,9 @@ GPRS	gprs
 绝对化	jxdh
 经得住	jxdi
 绝对值	jxdi
-匠心独具	jxdj
-结党	jxdj
 绝代	jxdj
+结党	jxdj
+匠心独具	jxdj
 绝对	jxdl
 嫉贤妒能	jxdn
 经典	jxdo
@@ -52885,15 +52865,14 @@ GPRS	gprs
 绝对性	jxdx
 匠心独运	jxdy
 结点	jxdy
-经得住	jxdz
 绝对值	jxdz
+经得住	jxdz
 继而	jxea
-继续恶化	jxeh
 缙	jxf
 纠纷案	jxfa
-纠风办	jxfb
 经费	jxfb
 缴费	jxfb
+纠风办	jxfb
 即兴发挥	jxfh
 急性发作	jxfi
 缴付	jxfj
@@ -52953,26 +52932,21 @@ GPRS	gprs
 缉	jxi
 简谐振动	jxid
 纠正	jxif
-结症	jxih
 绝症	jxih
 绝薪止火	jxih
-继续抓好	jxih
-骄恣	jxih
 假戏真做	jxii
 经侦	jxij
 绝招	jxik
 精心照料	jxil
-继之	jxil
 结账	jxio
 峻下逐水	jxis
 结转	jxis
 绛紫色	jxis
-机械制图	jxit
-纪传体	jxit
 绝种	jxit
 缴租	jxit
-绢	jxiv
+纪传体	jxit
 骄子	jxiv
+绢	jxiv
 骄纵	jxix
 绛紫	jxiy
 给	jxj
@@ -52991,12 +52965,10 @@ GPRS	gprs
 结界	jxjo
 经纪人	jxjr
 结晶	jxjr
-经籍	jxjt
 结晶体	jxjt
 绝境	jxju
-纪检委	jxjw
-经久	jxjw
 绝句	jxjw
+纪检委	jxjw
 纠结	jxjx
 经纪	jxjx
 将信将疑	jxjy
@@ -53005,8 +52977,8 @@ GPRS	gprs
 绝口	jxki
 结扣	jxkk
 结课	jxkl
-结款	jxku
 缴款	jxku
+结款	jxku
 骄狂	jxkw
 经	jxl
 经历	jxla
@@ -53026,14 +52998,13 @@ GPRS	gprs
 经理人	jxlr
 绝了	jxlv
 骏	jxlw
-纪律性	jxlx
-经纶	jxlx
 经络	jxlx
+经纶	jxlx
+纪律性	jxlx
 继	jxm
 经贸部	jxmb
 继	jxmc
 剿灭	jxmd
-绝灭	jxmd
 经贸局	jxmj
 绝命	jxmj
 缣	jxmk
@@ -53089,10 +53060,10 @@ GPRS	gprs
 近乡情怯	jxqq
 骄气	jxqt
 缴	jxr
-继任者	jxri
-绞肉机	jxrj
 继任	jxrj
+绞肉机	jxrj
 骄人	jxrj
+继任者	jxri
 惊喜若狂	jxrk
 绝热	jxrk
 绞肉	jxro
@@ -53181,8 +53152,8 @@ GPRS	gprs
 绝响	jxxi
 绞刑架	jxxj
 纪行	jxxk
-侥幸心理	jxxl
 经心	jxxl
+侥幸心理	jxxl
 绝学	jxxn
 经血	jxxr
 经销商	jxxs
@@ -53219,23 +53190,19 @@ GPRS	gprs
 绝缘子	jxyz
 简谐振动	jxzd
 纠正	jxzf
-结症	jxzh
 绝症	jxzh
 绝薪止火	jxzh
-继续抓好	jxzh
 骄恣	jxzh
 经侦	jxzj
 绝招	jxzk
-精心照料	jxzl
 继之	jxzl
 结账	jxzo
 峻下逐水	jxzs
 结转	jxzs
 绛紫色	jxzs
-机械制图	jxzt
-纪传体	jxzt
 绝种	jxzt
 缴租	jxzt
+纪传体	jxzt
 骄子	jxzv
 骄纵	jxzx
 绛紫	jxzy
@@ -53408,14 +53375,14 @@ GPRS	gprs
 疾言厉色	jyls
 敬业乐群	jylu
 金陵	jylv
-金兰湾	jylw
-金鳞	jylw
 锦鲤	jylw
+金鳞	jylw
+金兰湾	jylw
 锦纶	jylx
+铰链	jyly
+金缕衣	jyly
 金玉良缘	jyly
 金玉良言	jyly
-金缕衣	jyly
-铰链	jyly
 金链子	jylz
 锩	jym
 镜面	jyma
@@ -53575,8 +53542,8 @@ GPRS	gprs
 锦衣玉食	jyys
 集于一身	jyys
 钾盐	jyyu
-见义勇为	jyyw
 金鱼	jyyw
+见义勇为	jyyw
 锦衣卫	jyyw
 记忆犹新	jyyx
 锦衣夜行	jyyx
@@ -54327,74 +54294,48 @@ GPRS	gprs
 酷	kf
 髡	kfa
 髡	kfac
-可按	kfak
 可爱	kfam
 可不	kfba
 可编程	kfbc
 考博	kfbf
-考不过	kfbg
-可辨	kfbh
 可别	kfbi
 可鄙	kfbi
 狂放不羁	kfbj
-可把	kfbk
-克服不了	kfbl
-酷毙了	kfbl
-可避免	kfbm
 恐怖	kfbn
 可怖	kfbn
 恐怖片	kfbp
-可不是	kfbs
-考妣	kfbs
 酷毙	kfbs
-看法不同	kfbt
+考妣	kfbs
 可比性	kfbx
 可悲	kfby
 狂风暴雨	kfby
-可办	kfbz
-可成	kfca
 考查	kfcc
 勘测	kfcd
-可测	kfcd
 考察队	kfcd
 可耻	kfcf
 可操作	kfci
-可从	kfcj
-可持	kfck
 可曾	kfcm
 考察	kfcn
 可承受	kfcs
 考察团	kfct
 考场	kfcu
-可出	kfcv
 可持续	kfcx
 可采用	kfcy
 可操作	kfcz
-可达	kfda
-客服代表	kfdb
-可带	kfdf
-客服电话	kfdh
-可当	kfdj
-可打	kfdk
-可读	kfdl
 考订	kfdl
 勘定	kfdn
 可的松	kfds
 克敌	kfdt
-可多	kfdw
 可读性	kfdx
 可待因	kfdy
 考点	kfdy
 狂风恶浪	kfel
 可否	kffa
-可放	kffh
 考分	kffm
-可发	kffn
 克复	kfft
 克服	kffv
 可分为	kffw
 考风	kffw
-可发	kffz
 克格勃	kfgb
 酷棍	kfgc
 可耕地	kfgd
@@ -54402,7 +54343,6 @@ GPRS	gprs
 考古	kfgf
 恐高	kfgh
 恐高症	kfgi
-可供	kfgj
 可观	kfgl
 考官	kfgn
 可贵	kfgo
@@ -54412,20 +54352,15 @@ GPRS	gprs
 恐高症	kfgz
 考核	kfhc
 可汗	kfhd
-可获	kfhe
 恐吓	kfhi
-可换	kfhk
-可恨	kfhn
 恐慌	kfhn
+可恨	kfhn
 考后	kfhq
 可好	kfhs
 恐吓信	kfhx
-可贺	kfhz
 克	kfi
 考砸	kfia
-可真	kfif
 酷站	kfih
-可做	kfij
 口腹之累	kfil
 考证	kfil
 可憎	kfin
@@ -54437,7 +54372,6 @@ GPRS	gprs
 克	kfiw
 可执行	kfix
 匡扶正义	kfiy
-可钻	kfiy
 克己	kfjb
 勘校	kfjc
 可见度	kfjd
@@ -54445,9 +54379,7 @@ GPRS	gprs
 可见光	kfjg
 恐惧感	kfjg
 考进	kfjg
-可将	kfjh
 考据	kfjk
-可讲	kfjl
 狂风巨浪	kfjl
 考卷	kfjm
 恐惧	kfjn
@@ -54459,7 +54391,6 @@ GPRS	gprs
 考级	kfjx
 剋架	kfjz
 可考	kfkf
-考考	kfkf
 可控硅	kfkg
 可口	kfki
 考风考纪	kfkj
@@ -54496,9 +54427,6 @@ GPRS	gprs
 克隆	kflv
 可乐	kflw
 考虑	kfly
-可没	kfmd
-可卖	kfmf
-可免	kfmw
 勘	kfn
 可能会	kfnh
 狂风怒号	kfnh
@@ -54510,9 +54438,6 @@ GPRS	gprs
 可能性	kfnx
 聩	kfo
 聩	kfoo
-可攀	kfpc
-可凭	kfpj
-可抛	kfpk
 考评	kfpl
 可怕	kfpn
 克服缺点	kfqd
@@ -54526,28 +54451,22 @@ GPRS	gprs
 可气	kfqt
 开赴前线	kfqx
 醌	kfr
-可溶	kfrd
 可人	kfrj
 酷热	kfrk
 可然律	kfrl
 可燃	kfrm
 考入	kfrm
-可容	kfrn
-可容纳	kfrn
-可忍	kfrn
 酷软	kfrs
 可燃物	kfrw
 可溶性	kfrx
 可燃性	kfrx
 酷睿	kfry
-可忍	kfrz
 戡	kfs
 考	kfs
 克死	kfsa
 克斯	kfsf
 可视化	kfsh
 可是这	kfsi
-可使	kfsj
 酷似	kfsj
 戡	kfsk
 考试	kfsl
@@ -54557,28 +54476,22 @@ GPRS	gprs
 酷暑	kfsr
 可说是	kfss
 考生	kfst
-可随	kfsv
 可塑性	kfsx
 考上	kfsy
 可是这	kfsz
 酷	kft
-可退	kftb
 克汀	kftd
 勘探队	kftd
 可提供	kftg
 可通过	kftg
 可叹	kfti
 勘探	kftk
-可调	kftl
-可逃	kftm
-可图	kfto
 考题	kftr
 剋	kfu
 克服缺点	kfud
 考勤	kfuf
 考取	kfuf
 考期	kfuf
-可亲	kfuh
 考前	kfum
 空乏其身	kfus
 可气	kfut
@@ -54590,25 +54503,19 @@ GPRS	gprs
 可闻	kfwj
 勘误	kfwl
 可谓	kfwl
-可为	kfwm
 考完	kfwn
 可畏	kfwo
 考完试	kfws
 考务	kfww
 酷夏	kfxa
-可想	kfxc
 可信度	kfxd
 口服心服	kfxf
 酷刑	kfxg
 可选择	kfxi
 可信	kfxj
-可循	kfxk
 可信赖	kfxl
-可心	kfxl
 酷炫	kfxm
 可惜	kfxn
-可向	kfxr
-可先	kfxt
 可笑	kfxt
 可选	kfxt
 可喜	kfxu
@@ -54616,37 +54523,24 @@ GPRS	gprs
 可行性	kfxx
 可选择	kfxz
 考研	kfya
-可要	kfyf
-可于	kfyg
-可意	kfyh
-可言	kfyh
-可依	kfyj
 可以	kfyl
-可因	kfyo
-可移	kfyt
-可也	kfyv
 可疑	kfyw
+考验	kfyx
 勘验	kfyx
 可用性	kfyx
 康复医学	kfyx
-考验	kfyx
 勘	kfz
 考砸	kfza
-可真	kfzf
 可执行	kfzh
 酷站	kfzh
-可做	kfzj
 口腹之累	kfzl
 考证	kfzl
-可憎	kfzn
-考中	kfzo
 夸父追日	kfzr
 夸父逐日	kfzr
 可再生	kfzs
 克制	kfzt
 可执行	kfzx
 匡扶正义	kfzy
-可钻	kfzy
 勘	kfzz
 开	kg
 刊	kg
@@ -54856,9 +54750,9 @@ GPRS	gprs
 口干舌燥	kgsi
 亏损	kgsk
 开设	kgsl
-亏损面	kgsm
-刊首	kgsm
 开释	kgsm
+刊首	kgsm
+亏损面	kgsm
 开赛	kgsn
 开山	kgso
 开始	kgss
@@ -55288,8 +55182,8 @@ GPRS	gprs
 叩	kivv
 咯	kiw
 口味	kiwi
-叩问	kiwj
 咖位	kiwj
+叩问	kiwj
 口误	kiwl
 控制污染	kiwr
 枯燥无味	kiww
@@ -55309,8 +55203,8 @@ GPRS	gprs
 跨跃	kiyi
 咔	kiyj
 咔	kiyk
-口译	kiyl
 口语	kiyl
+口译	kiyl
 口谕	kiyl
 口炎	kiym
 口眼	kiyo
@@ -55446,9 +55340,8 @@ GPRS	gprs
 抗病毒	kkbd
 看不到	kkbd
 看不惯	kkbg
-看不过	kkbg
-抗病	kkbh
 看病	kkbh
+抗病	kkbh
 抗不住	kkbi
 看不见	kkbj
 开口闭口	kkbk
@@ -55478,7 +55371,6 @@ GPRS	gprs
 看错	kkcy
 扩大	kkda
 看得出	kkdc
-扩大到	kkdd
 看得到	kkdd
 空空荡荡	kkdd
 扣带	kkdf
@@ -55488,8 +55380,8 @@ GPRS	gprs
 扩大化	kkdh
 看跌	kkdi
 看得见	kkdj
-拷打	kkdk
 看待	kkdk
+拷打	kkdk
 看对	kkdl
 看灯	kkdm
 看懂	kkdn
@@ -55505,8 +55397,8 @@ GPRS	gprs
 侃侃而谈	kket
 扛	kkf
 扣费	kkfb
-抗法	kkfd
 看法	kkfd
+抗法	kkfd
 控方	kkfh
 看房	kkfl
 扣分	kkfm
@@ -55528,14 +55420,14 @@ GPRS	gprs
 控购	kkgo
 抗干扰	kkgr
 抗感染	kkgr
-控告	kkgt
 看管	kkgt
+控告	kkgt
 控股	kkgv
 抗高温	kkgw
 抗	kkh
 括弧	kkhb
-扛活	kkhd
 抗洪	kkhd
+扛活	kkhd
 扩	kkhe
 括号	kkhi
 看孩子	kkhi
@@ -55555,6 +55447,7 @@ GPRS	gprs
 扩展槽	kkic
 看涨	kkid
 控制杆	kkig
+抗震	kkih
 看准	kkih
 扣	kkii
 控制键	kkij
@@ -55671,9 +55564,9 @@ GPRS	gprs
 空口说白话	kksh
 看似	kksj
 捆手	kksk
-抗衰老	kksl
-抗诉	kksl
 控诉	kksl
+抗诉	kksl
+抗衰老	kksl
 扣杀	kksm
 抠	kksm
 看守	kksn
@@ -55701,8 +55594,8 @@ GPRS	gprs
 看清楚	kkuc
 看清	kkud
 看其	kkuf
-扣球	kkug
 控球	kkug
+扣球	kkug
 看齐	kkuh
 看轻	kkus
 夸夸其谈	kkut
@@ -59273,6 +59166,7 @@ GPRS	gprs
 立足于	lhiy
 雷阵雨	lhiy
 冷	lhj
+零	lhj
 立即	lhjb
 零九笔	lhjb
 辣椒	lhjc
@@ -62253,6 +62147,7 @@ GPRS	gprs
 鲁智深	lwis
 留种	lwit
 留置权	lwiu
+乐子	lwiv
 卵子	lwiv
 留驻	lwix
 漏网之鱼	lwiy
@@ -62410,6 +62305,7 @@ GPRS	gprs
 鲁智深	lwzs
 留种	lwzt
 留置权	lwzu
+乐子	lwzv
 卵子	lwzv
 留驻	lwzx
 漏网之鱼	lwzy
@@ -67786,7 +67682,6 @@ GPRS	gprs
 那座	nbih
 南北战争	nbii
 那阵子	nbii
-内部资料	nbil
 那种	nbit
 那阵	nbiv
 尿检	nbjc
@@ -67901,7 +67796,6 @@ GPRS	gprs
 那支	nbzf
 那座	nbzh
 那只	nbzi
-内部资料	nbzl
 那种	nbzt
 那阵	nbzv
 南北战争	nbzz
@@ -108804,9 +108698,9 @@ QQ密码	qqmm
 水边	sdbz
 淞	sdc
 水厂	sdca
-撒豆成兵	sdcb
 沙尘暴	sdcb
 深层	sdcb
+撒豆成兵	sdcb
 深层次	sdcc
 水池	sdcd
 深沉	sdcd
@@ -108816,15 +108710,13 @@ QQ密码	qqmm
 水池子	sdci
 水产局	sdcj
 沙茶酱	sdcj
-深仇	sdcj
 沭	sdck
 水处理	sdcl
-扫地出门	sdcm
 水彩	sdcm
+扫地出门	sdcm
 淞	sdcm
 沙虫	sdco
 沙尘	sdcp
-沙尘暴	sdcp
 沙船	sdcq
 手段残忍	sdcr
 水车	sdcs
@@ -108832,8 +108724,8 @@ QQ密码	qqmm
 沙场	sdcu
 渗出	sdcv
 潸	sdcv
-沈从文	sdcw
 深处	sdcw
+沈从文	sdcw
 水产业	sdcy
 水池子	sdcz
 水	sdd
@@ -108847,9 +108739,9 @@ QQ密码	qqmm
 湿度	sddh
 水底	sddh
 水电站	sddi
-水电局	sddj
 沙袋	sddj
 湿度计	sddj
+水电局	sddj
 深得	sddk
 水道	sddm
 水电	sddo
@@ -108858,8 +108750,8 @@ QQ密码	qqmm
 水稻	sddt
 湿地	sddu
 沙雕	sddw
-山东大学	sddx
 说东道西	sddx
+山东大学	sddx
 沙丁鱼	sddy
 水电站	sddz
 沙俄	sdej
@@ -115180,6 +115072,7 @@ QQ密码	qqmm
 失事	stsf
 失散	stsf
 私事	stsf
+私生饭	stsf
 生死观	stsg
 生石膏	stsg
 生石灰	stsh
@@ -115197,10 +115090,11 @@ QQ密码	qqmm
 失身	stsr
 适时	stsr
 算式	stss
+私生	stst
 稍稍	stst
 失声	stsu
-生疏	stsv
 税收	stsv
+生疏	stsv
 失色	stsw
 生丝	stsx
 升上	stsy
@@ -115210,8 +115104,8 @@ QQ密码	qqmm
 牲	sttd
 甡	sttd
 舌苔	stte
-殊途同归	sttg
 私吞	sttg
+殊途同归	sttg
 生疼	stth
 失蹄	stti
 稍停	sttj
@@ -118776,7 +118670,6 @@ QQ密码	qqmm
 停住	tjij
 体征	tjik
 停诊	tjil
-统计资料	tjil
 偷着	tjim
 脱缰之马	tjim
 途中	tjio
@@ -118998,7 +118891,6 @@ QQ密码	qqmm
 停住	tjzj
 体征	tjzk
 停诊	tjzl
-统计资料	tjzl
 偷着	tjzm
 脱缰之马	tjzm
 途中	tjzo
@@ -120261,7 +120153,6 @@ QQ密码	qqmm
 贴紧	toju
 图解	tojw
 团结	tojx
-田纪云	tojy
 贴金	tojy
 图库	tokh
 团块	toku
@@ -131659,7 +131550,6 @@ Z	vyz
 五星红旗	wxhu
 维族	wxih
 无形之中	wxii
-文献资料	wxil
 无心之失	wxis
 纹状体	wxit
 维	wxj
@@ -131743,7 +131633,6 @@ Z	vyz
 纹银	wxyy
 五项原则	wxyz
 维族	wxzh
-文献资料	wxzl
 无心之失	wxzs
 纹状体	wxzt
 无形之中	wxzz
@@ -138255,7 +138144,6 @@ Z	vyz
 熊瞎子打立正	xxii
 雄心壮志	xxii
 细作	xxij
-详细资料	xxil
 绣着	xxim
 细则	xxio
 修行在个人	xxir
@@ -138505,7 +138393,6 @@ Z	vyz
 星星之火	xxzh
 线装	xxzh
 细作	xxzj
-详细资料	xxzl
 绣着	xxzm
 细则	xxzo
 修行在个人	xxzr
@@ -144014,6 +143901,7 @@ Z	vyz
 遥想	ymxc
 义项	ymxf
 烟霞	ymxh
+烟熏妆	ymxi
 义兄	ymxi
 养心	ymxl
 养性	ymxn
@@ -144022,21 +143910,21 @@ Z	vyz
 烟熏	ymxt
 爻象	ymxw
 月明星稀	ymxx
+烟熏妆	ymxz
 益友	ymya
 跃马扬鞭	ymyb
 义演	ymyd
 烟雨	ymyf
-益于	ymyg
 遥远	ymyg
-养育	ymyh
 养颜	ymyh
+养育	ymyh
 越描越黑	ymyh
 烟叶	ymyi
 义勇军	ymyj
 仰慕已久	ymyj
 义勇	ymyl
-丫丫	ymym
 爷爷	ymym
+丫丫	ymym
 养眼	ymyo
 欲与	ymys
 养阴	ymyv
@@ -144045,18 +143933,18 @@ Z	vyz
 有模有样	ymyy
 炀	ymz
 养殖	ymza
-一面之词	ymzc
-一面之辞	ymzc
 养殖场	ymzc
+一面之辞	ymzc
+一面之词	ymzc
 烟柱	ymzc
 炀	ymze
-养殖户	ymzh
 炎症	ymzh
+养殖户	ymzh
 烟嘴	ymzi
 一面之交	ymzj
 遥指	ymzk
-与民争利	ymzl
 义诊	ymzl
+与民争利	ymzl
 遥祝	ymzl
 养着	ymzm
 釉质	ymzq
@@ -144064,15 +143952,14 @@ Z	vyz
 验明正身	ymzs
 益智	ymzt
 欲走	ymzu
-义肢	ymzv
 养子	ymzv
+义肢	ymzv
 养猪	ymzw
 羊杂	ymzw
-烟纸	ymzx
 鱼米之乡	ymzx
-一面之缘	ymzy
+烟纸	ymzx
 养殖业	ymzy
-养猪业	ymzy
+一面之缘	ymzy
 揠苗助长	ymzz
 宜	yn
 盈	yn
@@ -150007,7 +149894,6 @@ Z	vyz
 这里	zhlo
 照葫芦画瓢	zhlp
 资料片	zhlp
-忠厚老实	zhls
 资料室	zhls
 站了	zhlv
 主链	zhly
@@ -151403,7 +151289,6 @@ Z	vyz
 之城	zlcu
 诛除	zlcv
 之处	zlcw
-资料查询	zlcx
 祖冲之	zlcz
 之大	zlda
 之大成	zldc
@@ -155415,7 +155300,6 @@ Z	vyz
 忠孝节义	zxjy
 织锦	zxjy
 终结者	zxjz
-在线客服	zxkf
 绽开	zxkg
 争先恐后	zxkh
 资讯科技	zxkj
