--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -5106,9 +5106,9 @@ bilibili	blbl
 贝勒	bolf
 败露	bolh
 崩龙族	boli
-贝类	bolm
-贝雷帽	bolm
 败类	bolm
+贝雷帽	bolm
+贝类	bolm
 蝙	bolo
 贝利	bolt
 贝鲁特	bolt
@@ -39202,9 +39202,9 @@ GPRS	gprs
 庄股	ihgv
 主观性	ihgx
 作何感想	ihgx
-最惠国待遇	ihgy
 装	ihh
 装潢	ihhd
+壮汉	ihhd
 麈	ihhd
 座号	ihhi
 霅	ihhi
@@ -39437,6 +39437,7 @@ GPRS	gprs
 主题	ihtr
 族	ihtt
 主题曲	ihtu
+装填	ihtu
 旃	ihtw
 主体性	ihtx
 纵横天下	ihtx
@@ -39499,8 +39500,8 @@ GPRS	gprs
 资讯	ihxl
 衷心	ihxl
 准许	ihxl
-主席令	ihxl
 主旋律	ihxl
+主席令	ihxl
 遮羞	ihxm
 资兴	ihxn
 彰显	ihxr
@@ -39780,17 +39781,13 @@ GPRS	gprs
 只留	iilw
 壮志凌云	iily
 踯	iim
-只买	iimc
-只卖	iimf
-噂	iimf
 知子莫若父	iimf
 自找麻烦	iimf
+噂	iimf
 再怎么好	iimh
 咒骂	iimi
 咱们	iimj
-种植面积	iimj
 咂摸	iimk
-站在门口	iimk
 朝朝暮暮	iimm
 啄木鸟	iimn
 自找没趣	iimq
@@ -39798,7 +39795,6 @@ GPRS	gprs
 自找没趣	iimu
 踯	iimv
 踪	iin
-战争年代	iind
 咋弄	iing
 置之脑后	iinh
 自作孽，不可活	iinh
@@ -39810,7 +39806,6 @@ GPRS	gprs
 咀	iiod
 躅	iiow
 只配	iipf
-战争破坏	iiph
 嘴皮子	iipi
 只凭	iipj
 只怕	iipn
@@ -41398,6 +41393,9 @@ GPRS	gprs
 总政	imif
 曾祖父	imif
 着装	imih
+总装	imih
+总站	imih
+总章	imih
 着重号	imih
 众目昭彰	imii
 总值	imij
@@ -41405,9 +41403,9 @@ GPRS	gprs
 总之	imil
 总重量	imil
 追名逐利	imil
+郑州	imim
 曾祖母	imim
 炽	imim
-郑州	imim
 知命之年	imin
 总账	imio
 着罪	imio
@@ -41625,11 +41623,6 @@ GPRS	gprs
 总支	imzf
 总政	imzf
 曾祖父	imzf
-总站	imzh
-总章	imzh
-总装	imzh
-着装	imzh
-着重号	imzh
 众目昭彰	imzi
 总值	imzj
 粘住	imzj
@@ -41640,11 +41633,6 @@ GPRS	gprs
 总重量	imzl
 曾祖	imzl
 追名逐利	imzl
-曾祖母	imzm
-灼灼	imzm
-着着	imzm
-粘着	imzm
-郑州	imzm
 知命之年	imzn
 总则	imzo
 总账	imzo
@@ -42942,6 +42930,7 @@ GPRS	gprs
 晫	iryr
 最易	iryr
 主任医师	irys
+自娱	irys
 早夭	iryt
 昭阳	iryv
 自以为	iryw
@@ -43446,6 +43435,7 @@ GPRS	gprs
 知彼	itbk
 筑宾	itbn
 重兵	itbr
+制版	itbr
 竹帛	itbr
 自叹不如	itbr
 遮天蔽日	itbr
@@ -43950,17 +43940,14 @@ GPRS	gprs
 走掉	iudk
 走读	iudl
 走调	iudl
-争权夺利	iudl
+知情达理	iudl
 紫气东来	iudl
 走道	iudm
-走到	iuds
 走读生	iuds
 增多	iudw
 争奇斗艳	iudy
-走点	iudy
 赭	iuf
 埴	iufd
-走法	iufd
 政企分开	iufk
 走访	iufl
 增发	iufn
@@ -48499,8 +48486,8 @@ GPRS	gprs
 积极分子	jjfi
 伎	jjfl
 健腹轮	jjfl
-借机发难	jjfn
 假发	jjfn
+借机发难	jjfn
 俊峰	jjfo
 借	jjfr
 假分数	jjfs
@@ -48634,7 +48621,6 @@ GPRS	gprs
 津津乐道	jjld
 借来	jjlh
 价廉	jjlh
-紧紧拉住	jjli
 伎俩	jjlj
 俊朗	jjll
 伽利略	jjll
@@ -48648,12 +48634,10 @@ GPRS	gprs
 焦虑	jjly
 甲基绿染液	jjly
 借力	jjlz
-紧紧拉住	jjlz
 焦	jjm
 价码	jjma
 价目表	jjmb
 健美操	jjmc
-阶级矛盾	jjmd
 间苗	jjme
 剑麻	jjmh
 家给民足	jjmi
@@ -48696,7 +48680,6 @@ GPRS	gprs
 家境贫寒	jjph
 佳品	jjpi
 仅凭	jjpj
-竞价拍卖	jjpm
 间盘	jjpq
 节节攀升	jjps
 健脾	jjpv
@@ -49210,7 +49193,6 @@ GPRS	gprs
 捐献	jkxf
 街巷	jkxf
 接线柱	jkxi
-健康心理	jkxl
 接下来	jkxl
 揪心	jkxl
 街心	jkxl
@@ -52126,6 +52108,7 @@ GPRS	gprs
 祭灶	jvim
 胶质	jviq
 降至	jvis
+降智	jvit
 脚趾头	jvit
 降脂	jviv
 胶子	jviv
@@ -52271,6 +52254,7 @@ GPRS	gprs
 胶着	jvzm
 胶质	jvzq
 降至	jvzs
+降智	jvzt
 脚趾头	jvzt
 降脂	jvzv
 胶纸	jvzx
@@ -52896,7 +52880,6 @@ GPRS	gprs
 经过	jxgf
 结构钢	jxgg
 吉星高照	jxgi
-绩效工资	jxgi
 缴公	jxgm
 结果	jxgo
 经国	jxgo
@@ -52906,7 +52889,6 @@ GPRS	gprs
 结构图	jxgt
 结构性	jxgx
 吉星高照	jxgz
-绩效工资	jxgz
 绞	jxh
 结核病	jxhb
 骄横	jxhc
@@ -52926,7 +52908,6 @@ GPRS	gprs
 结婚	jxhs
 绛红色	jxhs
 锦绣河山	jxhs
-举行会谈	jxht
 绛红	jxhx
 交相辉映	jxhy
 结婚照	jxhz
@@ -55564,6 +55545,7 @@ GPRS	gprs
 抗体	kktj
 看台	kktl
 看头	kktn
+抠图	kkto
 看图	kkto
 看贴	kkto
 扣题	kktr
@@ -55578,8 +55560,6 @@ GPRS	gprs
 看轻	kkus
 夸夸其谈	kkut
 客客气气	kkuu
-扛起	kkuu
-看去	kkuu
 扣钱	kkuy
 控温	kkwd
 看望	kkwh
@@ -55660,7 +55640,6 @@ GPRS	gprs
 抗争	kkzw
 控制箱	kkzx
 控制线	kkzx
-刻苦钻研	kkzy
 抗战	kkzy
 看走眼	kkzy
 课	kl
@@ -55668,7 +55647,6 @@ GPRS	gprs
 科里奥利力	klal
 裉	klb
 可怜巴巴	klbb
-磕了八碜	klbc
 课标	klbc
 课本	klbf
 课表	klbg
@@ -55710,7 +55688,6 @@ GPRS	gprs
 课间操	kljc
 裤夹	kljh
 课件	kljj
-快乐健康	kljk
 裤脚	kljv
 考虑考虑	klkl
 科罗拉多	klld
@@ -55731,7 +55708,6 @@ GPRS	gprs
 可怜人必有可恨之处	klrc
 诓	kls
 课时费	klsf
-快乐时光	klsg
 戣	klsk
 克莱斯勒	klsl
 课室	klsn
@@ -55749,7 +55725,6 @@ GPRS	gprs
 裤裙	klul
 课前	klum
 诳	klw
-快乐无比	klwb
 柯林伍德	klwd
 克伦威尔	klwe
 诳	klwg
@@ -55766,10 +55741,8 @@ GPRS	gprs
 亢龙有悔	klyh
 课余	klyj
 诳语	klyl
-跨流域调水	klys
 课业	klyu
 裤腰	klyv
-考虑周到	klzd
 裤装	klzh
 课中	klzo
 考虑再三	klzs
@@ -55841,7 +55814,6 @@ GPRS	gprs
 烤鸭	kmyo
 抗美援越	kmyy
 孔孟之道	kmzd
-昆明准静止锋	kmzf
 烤制	kmzt
 炕桌	kmzy
 快	kn
@@ -55999,7 +55971,6 @@ GPRS	gprs
 空口	knki
 宽阔	knkj
 快看	knkk
-快快	knkn
 慷慨	knkn
 空旷	knkr
 空壳	knku
@@ -59380,14 +59351,13 @@ GPRS	gprs
 恋情	lhun
 恋曲	lhuo
 冷泉	lhur
-冷却水	lhus
 雷区	lhus
+冷却水	lhus
 冷气	lhut
 冷却	lhuu
-冷却器	lhuu
-冷清清	lhuu
-刘	lhuu
 离去	lhuu
+冷却器	lhuu
+刘	lhuu
 露脐	lhuv
 凌	lhuw
 零钱	lhuy
@@ -60396,9 +60366,8 @@ GPRS	gprs
 戾气	llut
 冷冷清清	lluu
 垒	lluu
-垒起	lluu
-塱	lluu
 踉踉跄跄	lluu
+塱	lluu
 郎	llv
 朗	llvv
 郎	llvv
@@ -62247,8 +62216,6 @@ GPRS	gprs
 留言本	lwyb
 留言板	lwyb
 留言簿	lwyb
-留言薄	lwyb
-留余地	lwyd
 留洋	lwyd
 留英	lwye
 乐于	lwyg
@@ -64741,13 +64708,11 @@ GPRS	gprs
 眯着眼睛	miyj
 鸣冤	miyl
 民族压迫	miyp
-名噪一时	miys
 名正言顺	miys
-名震一时	miys
-某种意义上	miys
 莫衷一是	miys
+名噪一时	miys
+名震一时	miys
 民族英雄	miyx
-某种意义	miyy
 咪唑	mizi
 骂阵	mizv
 骂战	mizy
@@ -64757,7 +64722,6 @@ GPRS	gprs
 命案	mjan
 名家辈出	mjbc
 门板	mjbc
-美军部队	mjbd
 门巴族	mjbi
 门把	mjbk
 门边	mjbn
@@ -69307,10 +69271,10 @@ GPRS	gprs
 男高音	nogy
 内阁制	nogz
 内核	nohc
-内华达	nohd
-内河	nohd
-内海	nohd
 内涵	nohd
+内海	nohd
+内河	nohd
+内华达	nohd
 男孩儿	nohe
 内耗	nohg
 男孩子	nohi
@@ -104763,7 +104727,6 @@ QQ密码	qqmm
 却无	quwg
 亲切问候	quwh
 起雾	quwh
-墙围子	quwi
 趣味	quwi
 去污剂	quwj
 趣闻	quwj
@@ -113992,12 +113955,9 @@ QQ密码	qqmm
 山清水秀	sqsx
 孰轻孰重	sqsz
 神气十足	sqsz
-所提供	sqtg
-所听	sqti
 身强体壮	sqti
 所提	sqtk
 所谈	sqtl
-事情突然	sqtr
 杀气腾腾	sqtt
 身强体壮	sqtz
 所求	squf
@@ -114040,8 +114000,8 @@ QQ密码	qqmm
 所以	sqyl
 所养	sqym
 所有权	sqyq
-所以然	sqyr
 所有人	sqyr
+所以然	sqyr
 所以说	sqys
 所有权	sqyu
 所用	sqyw
@@ -114080,10 +114040,8 @@ QQ密码	qqmm
 是被	srbl
 时弊	srbm
 身边	srbn
-鼠标器	srbq
-时不时	srbs
 是不是	srbs
-鼠标器	srbu
+时不时	srbs
 杀人不见血	srbx
 杀人不眨眼	srby
 鼠辈	srby
@@ -115143,8 +115101,10 @@ QQ密码	qqmm
 生物学	stwx
 生物系	stwx
 生物钟	stwz
+身台形表	stxb
 上天下地	stxd
 升心点	stxd
+私下	stxf
 剩下	stxf
 私刑	stxg
 生效	stxh
@@ -115184,10 +115144,9 @@ QQ密码	qqmm
 适应症	styi
 剩余	styj
 生意经	styj
-世态炎凉	styl
 失业率	styl
 生育率	styl
-适应力	styl
+世态炎凉	styl
 私欲	stym
 适宜	styn
 生鱼片	styp
@@ -115410,7 +115369,6 @@ QQ密码	qqmm
 声誉	suyn
 竖眼	suyo
 寺院	suyv
-肾阳	suyv
 声乐	suyw
 首屈一指	suyz
 声张	suzb
@@ -115504,7 +115462,6 @@ QQ密码	qqmm
 膻	svh
 收汇	svhd
 收获	svhe
-孙海峰	svhf
 收货	svhj
 陕	svhk
 胜寒	svhn
@@ -115635,9 +115592,9 @@ QQ密码	qqmm
 胜	svtd
 隋唐	svth
 收听	svti
-收	svtk
-收徒	svtk
 收摊	svtk
+收徒	svtk
+收	svtk
 陎	svtk
 疏通	svtl
 收	svtm
@@ -119764,6 +119721,7 @@ QQ密码	qqmm
 妥善	tmsm
 妥	tmss
 逃生	tmst
+逃税	tmst
 同门师兄	tmsx
 妥妥地	tmtd
 体貌特征	tmti
@@ -119817,15 +119775,12 @@ QQ密码	qqmm
 它	tn
 突	tna
 突	tnak
-糖尿病肾病	tnbb
 头班车	tnbc
-头部	tnbh
 突变	tnbh
+头部	tnbh
 头把	tnbk
 头版	tnbr
-糖尿病人	tnbr
 头孢	tnbv
-体能储备	tncb
 头寸	tncf
 头彩	tncm
 头筹	tnct
@@ -119837,7 +119792,6 @@ QQ密码	qqmm
 恬淡	tndd
 头顶	tndf
 头灯	tndm
-头顶上	tnds
 拖泥带水	tnds
 头等	tndt
 吐纳导引	tndy
@@ -119891,8 +119845,6 @@ QQ密码	qqmm
 头里	tnlo
 突噜皮	tnlp
 突撸皮	tnlp
-头临泣	tnlq
-头临泣	tnlu
 头脸	tnlv
 头颅	tnly
 窕	tnm
@@ -119910,12 +119862,10 @@ QQ密码	qqmm
 窕	tnmz
 迢	tnn
 他奶奶的	tnnd
-头脑中	tnni
 迢	tnnn
 突尼斯	tnns
 头年	tnnt
 头脑	tnnv
-头脑中	tnnz
 突破	tnpa
 突破点	tnpd
 头排	tnpk
@@ -119925,14 +119875,11 @@ QQ密码	qqmm
 头牌	tnpr
 突破性	tnpx
 头皮	tnpz
-体内缺乏	tnqf
 头球	tnqg
 头前	tnqm
 突泉	tnqr
 突起	tnqu
 探囊取物	tnqw
-头脑清醒	tnqx
-头窍阴	tnqy
 惕	tnr
 突然间	tnrj
 突入	tnrm
@@ -119940,7 +119887,6 @@ QQ密码	qqmm
 突然	tnrw
 突然性	tnrx
 天怒人怨	tnry
-体内水分	tnsf
 天女散花	tnsh
 突审	tnsn
 恬适	tnst
@@ -119958,14 +119904,11 @@ QQ密码	qqmm
 头胎	tntv
 头条	tntw
 头铁	tnty
-体内缺乏	tnuf
 头球	tnug
 头前	tnum
 突泉	tnur
 突起	tnuu
 探囊取物	tnuw
-头脑清醒	tnux
-头窍阴	tnuy
 它	tnw
 突兀	tnwa
 头尾	tnwb
@@ -121447,11 +121390,11 @@ QQ密码	qqmm
 统治者	txii
 统招	txik
 驮着	txim
-统治权	txiq
+统治区	txiq
 谈笑自若	txir
 统招生	txis
 统制	txit
-统治权	txiu
+统治区	txiu
 统战	txiy
 统建	txjb
 统计表	txjb
@@ -126414,7 +126357,6 @@ QQ密码	uumm
 却无	uuwg
 亲切问候	uuwh
 起雾	uuwh
-墙围子	uuwi
 趣味	uuwi
 去污剂	uuwj
 趣闻	uuwj
@@ -129602,8 +129544,8 @@ Z	vyz
 误传	wlcj
 万里长空	wlck
 谓词	wlcl
-乌兰察布盟	wlcm
 误差	wlcm
+乌兰察布盟	wlcm
 误车	wlcs
 误场	wlcu
 误触	wlcw
@@ -132517,9 +132459,9 @@ Z	vyz
 行成于思	xcys
 想用	xcyw
 校园网	xcyw
-响彻云霄	xcyx
-想一想	xcyx
 相约	xcyx
+想一想	xcyx
+响彻云霄	xcyx
 相一致	xcyz
 消除障碍	xcza
 相左	xcza
@@ -135081,8 +135023,9 @@ Z	vyz
 袖珍	xlig
 戏装	xlih
 写作	xlij
-悬梁自尽	xlij
 熊掌	xlij
+悬梁自尽	xlij
+先撩者贱	xlij
 谐振	xlik
 写字楼	xlil
 写着	xlim
@@ -135378,8 +135321,9 @@ Z	vyz
 袖珍	xlzg
 戏装	xlzh
 写作	xlzj
-悬梁自尽	xlzj
 熊掌	xlzj
+悬梁自尽	xlzj
+先撩者贱	xlzj
 谐振	xlzk
 写字楼	xlzl
 写着	xlzm
@@ -140462,22 +140406,21 @@ Z	vyz
 移动硬盘	ydyp
 一夜情	ydyq
 演艺圈	ydyq
+游弋	ydys
 有得有失	ydys
 有胆有识	ydys
 游医	ydys
-游弋	ydys
-言多语失	ydys
 一言堂	ydyt
 游移	ydyt
 一夜情	ydyu
 渔业	ydyu
 演艺圈	ydyu
-一月	ydyv
 一隅	ydyv
+一月	ydyv
 沿用	ydyw
 演绎	ydyx
-一页页	ydyy
 游泳衣	ydyy
+一页页	ydyy
 一阳指	ydyz
 一丈	ydza
 一张	ydzb
@@ -141741,8 +141684,9 @@ Z	vyz
 衣襟	yhjl
 饔	yhjl
 移花接木	yhjm
-於	yhjn
+衣架	yhjn
 赢家	yhjn
+於	yhjn
 意见	yhjo
 夜景	yhjr
 应届生	yhjs
@@ -143345,10 +143289,8 @@ Z	vyz
 冤死	ylsa
 伊丽莎白	ylsb
 译述	ylsc
-亚力山大	ylsd
 亚历山大	ylsd
 亚里士多德	ylsd
-亚里斯多德	ylsd
 压力山大	ylsd
 英伦三岛	ylsd
 讶	ylse
@@ -145184,12 +145126,11 @@ Z	vyz
 娱	ysi
 姨丈	ysia
 原生质层	ysic
-养生之道	ysid
 医治	ysid
-吟诗作对	ysid
-彧	ysid
 怨声载道	ysid
 欲速则不达	ysid
+吟诗作对	ysid
+彧	ysid
 吟诗作赋	ysif
 雅正	ysif
 一水之隔	ysig
@@ -145466,12 +145407,10 @@ Z	vyz
 医药费	ysyf
 妖艳	ysyg
 疑神疑鬼	ysyg
-一丝一毫	ysyh
 妖冶	ysyh
-妖言	ysyh
-要死要活	ysyh
-雅意	ysyh
 雅言	ysyh
+要死要活	ysyh
+一丝一毫	ysyh
 有始有终	ysyi
 有色眼镜	ysyj
 一时一刻	ysyk
@@ -149720,12 +149659,10 @@ Z	vyz
 最惠国待遇	zhgy
 资格证	zhgz
 装	zhh
-主河道	zhhd
-主航道	zhhd
-壮汉	zhhd
-疰	zhhd
 装潢	zhhd
+壮汉	zhhd
 麈	zhhd
+疰	zhhd
 座号	zhhi
 霅	zhhi
 症候	zhhj
@@ -150038,8 +149975,8 @@ Z	vyz
 资讯	zhxl
 衷心	zhxl
 准许	zhxl
-主席令	zhxl
 主旋律	zhxl
+主席令	zhxl
 遮羞	zhxm
 资兴	zhxn
 彰显	zhxr
@@ -151767,11 +151704,6 @@ Z	vyz
 总支	zmif
 总政	zmif
 曾祖父	zmif
-总站	zmih
-总章	zmih
-总装	zmih
-着装	zmih
-着重号	zmih
 众目昭彰	zmii
 州	zmii
 总值	zmij
@@ -151782,12 +151714,6 @@ Z	vyz
 总重量	zmil
 曾祖	zmil
 追名逐利	zmil
-曾祖母	zmim
-灼灼	zmim
-炽	zmim
-着着	zmim
-粘着	zmim
-郑州	zmim
 知命之年	zmin
 总则	zmio
 总账	zmio
@@ -152004,6 +151930,9 @@ Z	vyz
 总政	zmzf
 曾祖父	zmzf
 着装	zmzh
+总装	zmzh
+总站	zmzh
+总章	zmzh
 着重号	zmzh
 总值	zmzj
 自卖自夸	zmzk
@@ -153326,7 +153255,6 @@ Z	vyz
 晫	zryr
 最易	zryr
 主任医师	zrys
-最与	zrys
 自娱	zrys
 早夭	zryt
 昭阳	zryv
@@ -153819,12 +153747,11 @@ Z	vyz
 知本家	ztbj
 知彼	ztbk
 筑宾	ztbn
+重兵	ztbr
 制版	ztbr
-制表人	ztbr
 竹帛	ztbr
 自叹不如	ztbr
 遮天蔽日	ztbr
-重兵	ztbr
 筑坝	ztbu
 长膘	ztbv
 制备	ztbw
@@ -154331,23 +154258,16 @@ Z	vyz
 走动	zudg
 走低	zudj
 走掉	zudk
-争权夺利	zudl
-增订	zudl
-知情达理	zudl
-紫气东来	zudl
 走读	zudl
 走调	zudl
-争权夺利	zudl
+知情达理	zudl
 紫气东来	zudl
 走道	zudm
-走到	zuds
 走读生	zuds
 增多	zudw
 争奇斗艳	zudy
-走点	zudy
 赭	zuf
 埴	zufd
-走法	zufd
 政企分开	zufk
 走访	zufl
 增发	zufn
