--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -12813,6 +12813,7 @@ bilibili	blbl
 吃闲饭	cixf
 吵醒	cixf
 呈现	cixg
+吃席	cixh
 吹嘘	cixi
 吃小灶	cixi
 唱响	cixi
@@ -45836,7 +45837,7 @@ GTP	gtp
 哈雷	hilh
 呼噜	hili
 哈喇子	hili
-哈啰	hili
+哈喽	hili
 喉咙	hili
 哗啦	hili
 哈喇	hili
@@ -60990,6 +60991,7 @@ GTP	gtp
 走光	iugj
 增光	iugj
 走过来	iugl
+志怪	iugn
 赵国	iugo
 走过去	iugq
 至亲骨肉	iugr
@@ -203417,6 +203419,7 @@ Z	vyz
 走光	zugj
 增光	zugj
 走过来	zugl
+志怪	zugn
 赵国	zugo
 走过去	zugq
 至亲骨肉	zugr
