--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,17 +1,17 @@
 var:
-  last_build_time: 1719128226
+  last_build_time: 1719128675
   option:
     ascii_punct: false
     full_shape: false
     simplification: false
-  previously_selected_schema: zzdyx_perfect
+  previously_selected_schema: zzdyx_mod
   schema_access_time:
     double_pinyin_flypy: 1714512916
     pinyin_simp: 1716715120
     rime_mint: 1718949387
     xhup: 1717283574
     zzdyx_mini: 1716323996
-    zzdyx_mod: 1719128227
+    zzdyx_mod: 1719128678
     zzdyx_mofast: 1715064968
     zzdyx_perfect: 1719128317
     zzdyx_single: 1716659333
