--- a/rime/user.yaml
+++ b/rime/user.yaml
@@ -1,17 +1,15 @@
 var:
-  last_build_time: 1719128675
+  last_build_time: 1719400048
   option:
     ascii_punct: false
     full_shape: false
     simplification: false
-  previously_selected_schema: zzdyx_mod
+  previously_selected_schema: zzdyx_mini
   schema_access_time:
     double_pinyin_flypy: 1714512916
-    pinyin_simp: 1716715120
-    rime_mint: 1718949387
-    xhup: 1717283574
-    zzdyx_mini: 1716323996
-    zzdyx_mod: 1719128678
+    pinyin_simp: 1714660943
+    zzdyx_mini: 1719422831
+    zzdyx_mod: 1719398178
     zzdyx_mofast: 1715064968
-    zzdyx_perfect: 1719128317
-    zzdyx_single: 1716659333
+    zzdyx_perfect: 1719126223
+    zzdyx_single: 1718965765
