--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -6944,7 +6944,7 @@ bilibili	blbl
 办班	bnbg
 不能保证	bnbi
 办报	bnbk
-𰻝𰻝面	bnbm
+𰻝𰻞面	bnbm
 𰻞𰻞面	bnbm
 宝宝	bnbn
 不男不女	bnbn
@@ -7100,9 +7100,8 @@ bilibili	blbl
 边	bnn
 办年货	bnnh
 悖逆	bnnm
-边	bnnn
 𰻝	bnnn
-𰻞	bnnn
+边	bnnn
 百年难遇	bnny
 宝瓶座	bnpi
 边跑	bnpi
@@ -12813,7 +12812,6 @@ bilibili	blbl
 吃闲饭	cixf
 吵醒	cixf
 呈现	cixg
-吃席	cixh
 吹嘘	cixi
 吃小灶	cixi
 唱响	cixi
@@ -19769,7 +19767,6 @@ bilibili	blbl
 档案室	dcas
 档案学	dcax
 棣	dcb
-大差不差	dcbc
 调查报告	dcbg
 杜邦	dcbg
 地产板块	dcbk
@@ -45837,7 +45834,7 @@ GTP	gtp
 哈雷	hilh
 呼噜	hili
 哈喇子	hili
-哈喽	hili
+哈啰	hili
 喉咙	hili
 哗啦	hili
 哈喇	hili
@@ -48433,7 +48430,6 @@ GTP	gtp
 黑匣子	hox
 虹吸	hox
 回形针	hox
-回旋镖	hoxb
 回想	hoxc
 回校	hoxc
 回信儿	hoxe
@@ -60991,7 +60987,6 @@ GTP	gtp
 走光	iugj
 增光	iugj
 走过来	iugl
-志怪	iugn
 赵国	iugo
 走过去	iugq
 至亲骨肉	iugr
@@ -70018,9 +70013,9 @@ GTP	gtp
 家口	jnki
 机能亢进	jnkj
 艰难困苦	jnkk
-架空	jnkn
 加快	jnkn
 加宽	jnkn
+架空	jnkn
 窘困	jnko
 惊狂	jnkw
 惊雷	jnl
@@ -81686,8 +81681,8 @@ GTP	gtp
 老挝	lfwk
 老翁	lfwm
 老窝	lfwn
-赖	lfwo
 联网	lfwo
+赖	lfwo
 两旺	lfwr
 两万	lfws
 两位数	lfws
@@ -112883,7 +112878,6 @@ NFC	nfc
 愹	onnm
 辶	onnn
 𰻝	onnn
-𰻞	onnn
 逭	onnn
 迱	onnn
 邃	onnn
@@ -124998,7 +124992,6 @@ NFC	nfc
 剖视	phsl
 平实	phsn
 平山	phso
-痞帅	phsp
 平时	phsr
 平顺	phsr
 平生	phst
@@ -142869,7 +142862,6 @@ QQ密码	qqmm
 闪烁	sjsm
 食宿	sjsn
 佘山	sjso
-舒适圈	sjsq
 舍身	sjsr
 神经衰弱	sjsr
 伤身	sjsr
@@ -142878,7 +142870,6 @@ QQ密码	qqmm
 尚是	sjsr
 舒适	sjst
 闪失	sjst
-舒适圈	sjsu
 所见所闻	sjsw
 伸缩	sjsx
 伸缩性	sjsx
@@ -149256,7 +149247,6 @@ sp³杂化	spsh
 声息	suxr
 声讯台	suxt
 肾小球	suxu
-声线	suxx
 竖线	suxx
 失去信心	suxx
 肾虚	suxy
@@ -153558,7 +153548,6 @@ sp³杂化	spsh
 停飞	tjfz
 投机分子	tjfz
 俦	tjg
-体感	tjga
 堂哥	tjg
 体改	tjgb
 体格	tjgc
@@ -168110,10 +168099,9 @@ Z	vyz
 我控制不住自己	wkij
 外科专家	wkij
 捂住	wkij
-挽尊	wkim
+握着	wkim
 挽着	wkim
 捂着	wkim
-握着	wkim
 外科主任	wkir
 挖走	wkiu
 微增	wkiu
@@ -187654,7 +187642,6 @@ Z	vyz
 勇冠	ylgl
 一浪高过一浪	ylgl
 又该	ylgl
-用力过猛	ylgm
 预购	ylgo
 预告片	ylgp
 冤鬼	ylgr
@@ -191744,7 +191731,6 @@ Z	vyz
 院门	yvmj
 也门	yvmj
 阴谋	yvml
-阴谋论	yvml
 隐密	yvmn
 隐瞒	yvmo
 月明	yvmr
@@ -203419,7 +203405,6 @@ Z	vyz
 走光	zugj
 增光	zugj
 走过来	zugl
-志怪	zugn
 赵国	zugo
 走过去	zugq
 至亲骨肉	zugr
