--- a/rime/zzdyx_mini.dict.yaml
+++ b/rime/zzdyx_mini.dict.yaml
@@ -97227,31 +97227,25 @@ GPRS	gprs
 泊	pdrd
 漂染	pdrd
 瀑	pdrf
-平淡日子	pdri
 派人	pdrj
 沛然	pdrv
 沛然	pdrw
-平淡日子	pdrz
 婆	pds
-婆娑	pdsd
-泡水	pdsd
+泼水	pdsd
 泼洒	pdsd
-平淡是真	pdsi
+婆娑	pdsd
 泼水节	pdsj
 派送	pdsm
 婆	pdss
 派生	pdst
 泡上	pdsy
-平淡是真	pdsz
 湃	pdt
 泡桐	pdtc
 泡汤	pdtd
 湃	pdtg
 派头	pdtn
 澎	pdu
-排队抢购	pdug
 派遣证	pdui
-平等权利	pdul
 派遣	pduo
 澎	pduq
 派去	pduu
@@ -103818,9 +103812,8 @@ QQ密码	qqmm
 轻浮	qsfd
 轻放	qsfh
 轻拂	qsfk
-七分	qsfm
-切分	qsfm
 区分	qsfm
+切分	qsfm
 轻罚	qsfo
 切肤	qsfv
 轻风	qsfw
@@ -125449,10 +125442,8 @@ QQ密码	qqmm
 轻浮	usfd
 轻放	usfh
 轻拂	usfk
-七分	usfm
-亲生父母	usfm
-切分	usfm
 区分	usfm
+切分	usfm
 轻罚	usfo
 切肤	usfv
 轻风	usfw
